Se actualiza el css y el html a los requerimientos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   <h1 class="titulo">Galeria de Pokemones</h1>
 
+  <div class="busqueda">
+    <h1> Busca a tu Pokemon</h1>
+    <input type="text" name="Nombre_Pokemon" id="Nombre_Pokemon" >
+    <button id="Buscar_Pokemon">Busca a tu Compañero</button>
+  </div>
+
   <div class="galeria" id="galeria">
    
   </div>
